# zender

./: .eslintignore  .eslintrc.json  .gitignore  .prettierrc.json  README.md  index.html  jsconfig.json  package-lock.json  package.json  splashscreen.html  vite.config.ts  webpack.config.js
cypress/integration/2-advanced-examples/: actions.spec.js  cypress_api.spec.js  files.spec.js  misc.spec.js  network_requests.spec.js  utilities.spec.js
cypress/integration/zender/: home.spec.js
public/: bootstrap_icon.html  index.html
public/css/: bootstrap-icons.css  style.css
public/js/: app.js  app.js.map
src/: index.js  progress.md  routes.js  style.scss  util.js
src-tauri/: Cargo.toml  readme.md  tauri.conf.json
src-tauri/schemas/: errorr.json  metadata.json  user.json
src-tauri/src/: app.rs  commands.rs  error.rs  file.rs  lib.rs  main.rs  network.rs  tests.rs  user.rs
src-tauri/src/network/: behaviour.rs  client.rs  file.rs  mod.rs  server.rs
src/Material/: material.scss
src/Material/button/: button.js  button.scss
src/Material/tooltip/: tooltip.js  tooltip.scss
src/components/counter/: counter.js  counter.scss
src/components/file/: file.js  file.jsx  file.scss
src/components/home/: FilesView.jsx  Header.jsx  TreeView.jsx
src/components/sidebar/: item.js  sidebar.js  sidebar.jsx  sidebar.scss
src/controller/: error.js  event.js  file.js  files.js  main.js  network.js  user.js
src/controller/pattern/: index.js
src/pattern/: observer.js
src/settings/: api.js
src/tests/: counter.spec.js  test-setup.js
src/view/: download.js  download.jsx  home.js  material.js  material.jsx  readm.md  settings.js  settings.jsx  shared.js  shared.jsx  shared_detail.js  shared_detail.jsx  style.scss  users.js  users_shared.js  users_shared.jsx
src/view/home/: FilesGridView.jsx  FilesListView.jsx  Path.jsx  home.js  home.jsx  home.scss
src/view/users/: IpForm.jsx  user.scss  users.js  users.jsx
tests/: home.files_grid_view.spec.js  home.files_view.spec.js  home.path.spec.js  setup.ts
types/: errorr.d.ts  metadata.d.ts  user.d.ts
