[package]
name = "zender"
version = "0.1.0"
description = "A file sharing desktop App"
authors = ["AMADOU Ruchdane"]
license = "MIT"
repository = "https://github.com/Ruchdane/zender"
default-run = "zender"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.9", features = ["cli", "dialog-message", "dialog-open", "fs-copy-file", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "path-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
