[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dev-dependencies]
tempdir = "0.3"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
pnet = "0.31.0"
pnet_datalink = "0.31.0"
tauri = { version = "1.0.0-rc.9", features = ["cli", "dialog-message", "dialog-open", "fs-copy-file", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file"] }
hostname = "0.3.1"
whoami = "1.2.1"
mime = "0.3"
mime_guess = "2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
