[package]
name = "zender"
version = "0.1.0"
description = "A file sharing desktop App"
authors = ["AMADOU Ruchdane"]
license = "MIT"
repository = "https://github.com/Ruchdane/zender"
default-run = "zender"
edition = "2021"
rust-version = "1.57"

# Type geerator for 
#[[bin]]
#name = "dgen"
#test = false
#bench = false 

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dev-dependencies]
tempdir = "0.3"
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["fs","net","macros","sync"] }
tauri = { version = "1.0.0-rc.9", features = ["cli", "dialog-message", "dialog-open", "fs-copy-file", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "path-all"] }
libp2p = "0.43.0"
futures = "0.3.21"
# async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.57"

hostname = "0.3.1"
whoami = "1.2.1"
mime = "0.3"
mime_guess = "2.0"
schemars = "0.8.10"
env_logger= "0.9.0"
log = "0.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
split-debuginfo = "unpacked"
